# PaperChatAgent

./: .gitignore  CONTRIBUTING.md  README.md  requirements.md  需求文档.md
apps/backend/: pyproject.toml
apps/backend/paperchat/: __init__.py  config.example.yaml  main.py  prompts.py  settings.py
apps/backend/paperchat/agents/: __init__.py
apps/backend/paperchat/agents/research_orchestrator/: __init__.py  analyse_agent.py  definition.py  reading_agent.py  report_agent.py  runtime_support.py  search_agent.py  state_models.py  writing_agent.py
apps/backend/paperchat/api/: router.py
apps/backend/paperchat/api/errcode/: __init__.py  base.py
apps/backend/paperchat/api/responses/: __init__.py  sse.py
apps/backend/paperchat/api/v1/: agents.py  auth.py  capabilities.py  conversations.py  dashboard.py  knowledge.py  mcp.py  models.py  router.py  skills.py  tasks.py  workspaces.py
apps/backend/paperchat/auth/: __init__.py  service.py
apps/backend/paperchat/database/: sql.py
apps/backend/paperchat/database/dao/: __init__.py  memory_store.py
apps/backend/paperchat/database/models/: tables.py  (+2 more)
apps/backend/paperchat/prompts/: __init__.py  chat.py  guidance.py  memory.py  research_orchestrator.py  stream.py
apps/backend/paperchat/providers/: __init__.py  autogen.py  conversation.py  demo_chat_model.py  manager.py
apps/backend/paperchat/schemas/: capabilities.py  dashboard.py  knowledge.py  mcp.py  models.py  rag.py  skills.py  tasks.py
apps/backend/paperchat/services/: agent_repository.py
apps/backend/paperchat/workflows/: __init__.py  definitions.py  state.py
(+167 files in other folders)
